--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -459,7 +459,7 @@ body {
 .home {
   @media(max-width: 1399px) {
     .section-container {
-      max-width: 1200px;
+      //max-width: 1200px;
     }
 
     .head-section {
@@ -471,7 +471,7 @@ body {
 
   @media(max-width: 1199px) {
     .section-container {
-      max-width: 990px;
+      //max-width: 990px;
     }
 
     .questionnaire {
